burger fixed, added negative margin to hero on mobile

--- a/scss/syles.scss
+++ b/scss/syles.scss
@@ -508,6 +508,7 @@ footer {
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin-top: -5rem;
     }
     .hero-title-container {
       display: flex;
